--- a/.github/workflows/auto-get-waydroid-system-image.yml
+++ b/.github/workflows/auto-get-waydroid-system-image.yml
@@ -10,6 +10,7 @@ jobs:
     steps:
       - name: Get
         run: |
+          VERSION=1.0.0-`date +"%Y%m%d%H%M%S%N"`
           # 配置环境
           echo 配置环境
           sudo apt update
@@ -55,9 +56,10 @@ jobs:
           mkdir -p deb/usr/share/waydroid-extra
           cp system.img deb/usr/share/waydroid-extra
           cp vendor.img deb/usr/share/waydroid-extra
+
           cat > deb/DEBIAN/control <<EOF
           Package: waydroid-android-image-gapps
-          Version: 1.0.0
+          Version: $VERSION
           Maintainer: gfdgd xi <3025613752@qq.com>
           Homepage: https://github.com/gfdgd-xi/waydroid-runner
           Architecture: amd64
