--- a/.github/workflows/auto-get-waydroid-system-image.yml
+++ b/.github/workflows/auto-get-waydroid-system-image.yml
@@ -89,9 +89,12 @@ jobs:
           chmod 0775 -Rv deb/DEBIAN
           
           dpkg-deb -Z xz -z 4 -b deb waydroid-android-image-gapps.deb
-          curl -F 'file=waydroid-android-image-gapps.deb' $URL
+          curl -F 'file=@waydroid-android-image-gapps.deb' $URL
           #mv waydroid-android-image-gapps.deb /tmp
           apt download waydroid python3-gbinder libgbinder libglibutil
+          curl -F 'file=@libgbinder.deb' $URL
+          curl -F 'file=@libglibutil.deb' $URL
+          curl -F 'file=@python3-gbinder.deb' $URL
           dpkg -x waydroid_*.deb waydroid
           dpkg -e waydroid_*.deb waydroid/DEBIAN
           mkdir -p /tmp/waydroid/var/lib/waydroid/
@@ -133,16 +136,13 @@ jobs:
           rm waydroid/DEBIAN/md5sums -rfv
           python3 waydroid-deb-build/change-deb-debian.py waydroid/DEBIAN/control
           dpkg-deb -Z xz -z 4 -b waydroid waydroid.deb
-          mkdir upload-deb
-          cd upload-deb
-          cp ../*.deb .
-          git add .
-          git config --global user.name 'gfdgd-xi'
-          git config --global user.email 3025613752@qq.com
-
-          git commit -m "$VERSION"
-          git remote add origin https://$USER:$PASSWORD@jihulab.com/gfdgd-xi/waydroid-deb-diy
-          git push origin +master
+          curl -F 'file=@waydroid.deb' $URL
+          mv python3-gbinder*.deb python3-gbinder.deb
+          mv libgbinder*.deb libgbinder.deb
+          mv libglibutil*.deb libglibutil.deb
+          
+          
+          
           
           
       - name: upload result(system.img)
