--- a/.github/workflows/auto-get-waydroid-system-image.yml
+++ b/.github/workflows/auto-get-waydroid-system-image.yml
@@ -89,12 +89,12 @@ jobs:
           chmod 0775 -Rv deb/DEBIAN
           
           dpkg-deb -Z xz -z 4 -b deb waydroid-android-image-gapps.deb
-          curl -F 'file=@waydroid-android-image-gapps.deb' $URL
+          #curl -F 'file=@waydroid-android-image-gapps.deb' $URL
           #mv waydroid-android-image-gapps.deb /tmp
           apt download waydroid python3-gbinder libgbinder libglibutil
-          curl -F 'file=@libgbinder.deb' $URL
-          curl -F 'file=@libglibutil.deb' $URL
-          curl -F 'file=@python3-gbinder.deb' $URL
+          #curl -F 'file=@libgbinder.deb' $URL
+          #curl -F 'file=@libglibutil.deb' $URL
+          #curl -F 'file=@python3-gbinder.deb' $URL
           dpkg -x waydroid_*.deb waydroid
           dpkg -e waydroid_*.deb waydroid/DEBIAN
           mkdir -p /tmp/waydroid/var/lib/waydroid/
@@ -136,11 +136,22 @@ jobs:
           rm waydroid/DEBIAN/md5sums -rfv
           python3 waydroid-deb-build/change-deb-debian.py waydroid/DEBIAN/control
           dpkg-deb -Z xz -z 4 -b waydroid waydroid.deb
-          curl -F 'file=@waydroid.deb' $URL
+          #curl -F 'file=@waydroid.deb' $URL
           mv python3-gbinder*.deb python3-gbinder.deb
           mv libgbinder*.deb libgbinder.deb
           mv libglibutil*.deb libglibutil.deb
-          
+          #git clone https://gitlink.org.cn/rain-gfd/waydroid-image.git
+          mkdir waydroid-image
+          cd waydroid-image
+          git init .
+          cp ../system.img . -v
+          cp ../vendor.img . -v
+          git add .
+          git commit -m $VERSION
+          git config --global user.name 'rain-gfd'
+          git config --global user.email q3025613752@qq.com
+          git remote add origin https://$USER:$PASSWORD@gitlink.org.cn/rain-gfd/waydroid-image.git
+          git push origin +master
           
           
           
@@ -164,7 +175,11 @@ jobs:
         uses: actions/upload-artifact@v1
         with:
           name: waydroid.deb
-          path: /tmp/waydroid.deb
+          path: |
+            /tmp/waydroid.deb
+            /tmp/python3-gbinder.deb
+            /tmp/libgbinder.deb
+            /tmp/libglibutil.deb
       
 
   
