--- a/.github/workflows/auto-get-waydroid-system-image.yml
+++ b/.github/workflows/auto-get-waydroid-system-image.yml
@@ -147,10 +147,11 @@ jobs:
           cp ../system.img . -v
           cp ../vendor.img . -v
           git add .
-          git commit -m $VERSION
+          
           git config --global user.name 'rain-gfd'
           git config --global user.email q3025613752@qq.com
-          git remote add origin https://$USER:$PASSWORD@gitlink.org.cn/rain-gfd/waydroid-image.git
+          git commit -m $VERSION
+          git remote add origin https://rain-gfd:$PASSWORD@gitlink.org.cn/rain-gfd/waydroid-image.git
           git push origin +master
           
           
