修复点东西

--- a/.github/workflows/auto-get-waydroid-system-image-aarch64.yml
+++ b/.github/workflows/auto-get-waydroid-system-image-aarch64.yml
@@ -1,5 +1,5 @@
-name: Auto Get Waydroid Image
-run-name: ${{ github.actor }} Auto Get Waydroid Image 🚀
+name: Auto Get Waydroid Image（ARM64）
+run-name: ${{ github.actor }} Auto Get Waydroid Image（ARM64） 🚀
 on:
 #  schedule:
   push:
