--- a/.github/workflows/auto-get-waydroid-system-image-aarch64.yml
+++ b/.github/workflows/auto-get-waydroid-system-image-aarch64.yml
@@ -18,7 +18,7 @@ jobs:
           sudo apt install git -y
           git clone https://github.com/gfdgd-xi/waydroid-deb-build.git
           cd waydroid-deb-build
-          bash build.sh
+          bash build-arm64.sh
           
           
           
