--- a/.github/workflows/auto-push-waydroid-runner.yml
+++ b/.github/workflows/auto-push-waydroid-runner.yml
@@ -18,18 +18,6 @@ jobs:
           sudo apt install git -y
           git clone https://gitee.com/gfdgd-xi/waydroid-runner/
           cd waydroid-runner
-          cat > .git/config <<EOF
-          [core]
-          repositoryformatversion = 0
-          filemode = true
-          bare = false
-          logallrefupdates = true
-          [remote "origin"]
-          url = https://gfdgd-xi:$PASSWORD@github.com/gfdgd-xi/waydroid-runner.git
-          fetch = +refs/heads/*:refs/remotes/origin/*
-          [branch "master"]
-          remote = origin
-          merge = refs/heads/master
-          EOF
+          git remote set-url origin "https://gfdgd-xi:$PASSWORD@github.com/gfdgd-xi/waydroid-runner.git"
           git push
           
