--- a/.github/workflows/auto-get-waydroid-system-image.yml
+++ b/.github/workflows/auto-get-waydroid-system-image.yml
@@ -1,6 +1,7 @@
 name: Auto Get Waydroid Image
 run-name: ${{ github.actor }} Auto Get Waydroid Image 🚀
 on:
+  workflow_dispatch:
 #  schedule:
   schedule:
     - cron: '0 0 * * *'
