--- a/debian/rules
+++ b/debian/rules
@@ -18,6 +18,9 @@
 %:
 	dh $@
 
+override_dh_strip:
+	true
+
 
 # dh_make generated override targets.
 # This is an example for Cmake (see <https://bugs.debian.org/641051>).
