--- a/debian/rules
+++ b/debian/rules
@@ -21,6 +21,9 @@
 override_dh_strip:
 	true
 
+override_dh_shlibdeps:
+	true
+
 
 # dh_make generated override targets.
 # This is an example for Cmake (see <https://bugs.debian.org/641051>).
