--- a/debian/control
+++ b/debian/control
@@ -9,7 +9,8 @@ Build-Depends:
  curl,
  git,
  python3,
- python3-requests
+ python3-requests,
+ unzip
 Standards-Version: 4.6.2
 Homepage: https://gitee.com/GXDE-OS/waydroid-android-image-vanilla
 #Vcs-Browser: https://salsa.debian.org/debian/waydroid-android-image-vanilla
