--- a/debian/control
+++ b/debian/control
@@ -21,7 +21,8 @@ Architecture: i386 amd64 armhf arm64
 Depends:
  ${shlibs:Depends},
  ${misc:Depends},
- waydroid
+ waydroid,
+ bash
 Conflicts:
  waydroid-android-image-gapps
 Description: Waydroid Android 镜像 For GXDE
